// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> <TableBodyCell.Virtualized /> should match snapshot 1`] = `
<div>
  <td
    class="css-10r0z04"
    id="1"
  />
</div>
`;

exports[`<Table /> <TableBodyRow.Virtualized /> should match snapshot 1`] = `
<div>
  <tr
    class="css-1da2dbn"
    id="1"
  />
</div>
`;

exports[`<Table /> should match snapshot 1`] = `
<div>
  <div
    style="overflow: auto; position: relative; height: 800px;"
  >
    <table
      class="css-11xsab5"
    >
      <thead
        class="css-xyd1f1"
      >
        <tr
          class="css-15830to"
          id="0"
        >
          <th
            class="css-tlfye8"
            id="table-interactions"
          >
            <div
              class="css-1yz7e9k"
            >
              <div
                class="css-100ak8h"
              >
                <div
                  class="css-15cclx7"
                >
                  <input
                    class="css-kzrhrz"
                    id="select-all-checkbox"
                    type="checkbox"
                  />
                </div>
              </div>
            </div>
          </th>
          <th
            class="css-tlfye8"
            id="firstName"
          >
            <div
              class="css-1yz7e9k"
            >
              First Name
            </div>
          </th>
          <th
            class="css-tlfye8"
            id="lastName"
          >
            <div
              class="css-1yz7e9k"
            >
              Last Name
            </div>
          </th>
          <th
            class="css-tlfye8"
            id="age"
          >
            <div
              class="css-1yz7e9k"
            >
              Age
            </div>
          </th>
          <th
            class="css-tlfye8"
            id="visits"
          >
            <div
              class="css-1yz7e9k"
            >
              Visits
            </div>
          </th>
          <th
            class="css-tlfye8"
            id="status"
          >
            <div
              class="css-1yz7e9k"
            >
              Status
            </div>
          </th>
          <th
            class="css-tlfye8"
            id="progress"
          >
            <div
              class="css-1yz7e9k"
            >
              Progress
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="css-icyf4f"
      />
    </table>
  </div>
</div>
`;
